--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
     <div id="status" class="col-2">#status</div>
   </div>
   <div class="row crystals">
-    <div class="col-2"><img src="./assets/images/blue-stone.jpg" alt="something"></div>
-    <div class="col-2"><img src="./assets/images/green-stone.jpg" alt="something"></div>
-    <div class="col-2"><img src="./assets/images/red-stone.jpg" alt="something"></div>
-    <div class="col-2"><img src="./assets/images/yellow.jfif" alt="something"></div>
+    <div class="col-2" id="blueStone"><img  src="./assets/images/blue-stone.jpg" alt="something"></div>
+    <div class="col-2" id="greenStone"><img src="./assets/images/green-stone.jpg" alt="something"></div>
+    <div class="col-2" id="redStone"><img src="./assets/images/red-stone.jpg" alt="something"></div>
+    <div class="col-2"id="yellowStone"><img src="./assets/images/yellow.jfif" alt="something"></div>
     <br>
   </div>
   <div class="info-box"><h4>Your total score is:</h4>
