game is tracking the totals and printing to the screen

--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
     <p>The values of each crystal changes with each new game played.</p>
   </div>
   <div class="row">
-    <div id="target" class="col-3">#target</div>
-    <div id="status" class="col-2">#status</div>
+    <div id="currentTarget" class="col-3">#target</div>
+    <div id="win-box" class="col-2">Wins: </div>
+    <div id="loss-box" class="col-2">Loss: </div>
   </div>
   <div class="row crystals">
     <div class="col-2" id="blueStone"><img  src="./assets/images/blue-stone.jpg" alt="something"></div>
@@ -46,7 +47,7 @@
   </div>
   <div class="info-box"><h4>Your total score is:</h4>
   </div>
-  <div class="score-box">51</div>
+  <div id="score-box"></div>
 
 
     
