added screenshots of game

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   
 
 
-  <title>Document</title>
+  <title>Crystal Collector</title>
 </head>
 <body>
   <div class="container">
@@ -33,10 +33,11 @@
     <p>The value of each crystal is hidden from you until you click on it.</p>
     <p>The values of each crystal changes with each new game played.</p>
   </div>
+  
   <div class="row">
     <div id="currentTarget" class="col-3">#target</div>
-    <div id="win-box" class="col-2">Wins: </div>
-    <div id="loss-box" class="col-2">Loss: </div>
+    <div id="win-box" class="col-2">Wins: 0 </div>
+    <div id="loss-box" class="col-2">Loss: 0</div>
   </div>
   <div class="row crystals">
     <div class="col-2" id="blueStone"><img  src="./assets/images/blue-stone.jpg" alt="something"></div>
@@ -45,9 +46,10 @@
     <div class="col-2"id="yellowStone"><img src="./assets/images/yellow.jfif" alt="something"></div>
     <br>
   </div>
-  <div class="info-box"><h4>Your total score is:</h4>
-  </div>
-  <div id="score-box"></div>
+  <div id="info-box"></div>
+  
+  <div id="score-box"class="col-3">Sum: 0</div>
+  
 
 
     
